# own-your-diff

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml  skills.sh.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pylint.yml  release-binaries.yml
agents/: openai.yaml
configs/: agent_install.yaml  default_config.yaml  example_override.yaml
scripts/: build_binary.py  build_linux_release_binary.sh  ci_openclaw_flow.py  collect_diff.py  evaluate_answers.py  generate_mcq.py  generate_questions.py  generate_report.py  install_agent_rules.py  owndiff_cli.py  owndiff_runtime.py  present_mcq.py  quiz_tui.py  quiz_web.py  risk_score.py  run_owndiff.py  submit_answers.py  test_gap_scan.py  verify_release_assets.py
scripts/owndifflib/: __init__.py  common.py  config.py  diff_collect.py  git_utils.py  llm_questions.py  matching.py  mcq.py  policy.py  questions.py  report.py  risk.py  test_gap.py
skills/owndiff/: SKILL.md
skills/owndiff-pre-commit/: SKILL.md
skills/owndiff-pre-commit/agents/: openai.yaml
skills/owndiff-pre-commit/references/: policy.json
skills/owndiff-pre-commit/scripts/: audit.py
tests/: test_owndiff.py  test_pre_commit_audit.py
tests/fixtures/: llm_provider.py
